--- a/app/templates/kuvat.html
+++ b/app/templates/kuvat.html
@@ -17,7 +17,7 @@
                 <p> Finnan kanta ei löytänyt vuotta :-(</p>
             {% else %}
                 {% for record in finna_record %}
-                <div class="col-sm-6" class="kuva"><a href="{{ record }}"><img class="img-responsive" src="{{ finna_kuva[loop.index - 1] }}" alt="{{ finna_title[loop.index - 1] }}" title="{{ finna_title[loop.index - 1] }}"></a></div>
+                <div class="col-sm-6" class="kuva"><a href="{{ record }}"><img class="img-responsive" src="{{ finna_kuva[loop.index - 1] }}" alt="{{ finna_title[loop.index - 1] }}" title="{{ finna_source[loop.index - 1] }}&#013;{{ finna_title[loop.index - 1] }}"></a></div>
                 {% endfor %}
             {% endif %}
         </div>
