--- a/app/templates/faktat.html
+++ b/app/templates/faktat.html
@@ -48,5 +48,17 @@
                 <script type="text/javascript" src="http://code.highcharts.com/highcharts.js"></script>
                 <script type="text/javascript" src="../static/main.js" charset="UTF-8"></script>
         </div>
+        <div class="col-sm-6">
+            <!-- tänne graafeja -->
+        </div>
+    </div>
+    
+    <div class="row">
+        <div class="col-sm-6">
+            <!-- tänne graafeja -->
+        </div>
+        <div class="col-sm-6">
+            <!-- tänne graafeja -->
+        </div>
     </div>
 {% endblock %}
