--- a/app/static/style.css
+++ b/app/static/style.css
@@ -10,6 +10,10 @@
     z-index: 10;
 }
 
+.slider.slider-horizontal {
+    width: 100%;
+}
+
 .col-sm-6 {
     padding: 0.5%;
 }
@@ -100,5 +104,29 @@ li a:hover:not(.active) {
     .affix + .container {
         padding-top: 200px;
     }
+}
+
+input[type=range] {
+  -webkit-appearance: none; /* Hides the slider so that custom slider can be made */
+  width: 100%; /* Specific width is required for Firefox. */
+  background: transparent; /* Otherwise white in Chrome */
+}
+
+input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+}
+
+input[type=range]:focus {
+  outline: none; /* Removes the blue border. You should probably do some kind of focus styling for accessibility reasons though. */
+}
+
+input[type=range]::-ms-track {
+  width: 100%;
+  cursor: pointer;
+
+  /* Hides the slider so custom styles can be added */
+  background: transparent; 
+  border-color: transparent;
+  color: transparent;
 }
 
