--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -29,11 +29,16 @@
 <div id="navi" class="navbar navbar-inverse" data-spy="affix" data-offset-top="100">
     <div class="col-sm-12">
         <form action="{{ request.base_url }}" method="POST">
-            <div class="row" style="color:#FFFFFF;">
-                <p>Hae dataa vuodelta: </p><input type="range" name="year" value="{{ year }}" min="1917" max="2016" oninput="this.form.amountInput.value=this.value"/>
+            <div class="col-sm-12">
+                <p id="ohje_slider">Valitse vuosi: </p>
+                <button type="button" id="modaali" class="btn btn-info btn-lg" data-toggle="modal" data-target="#OhjeModal">Ohje</button>
+                <button type="button" id="modaali" class="btn btn-info btn-lg" data-toggle="modal" data-target="#TiedotModal">Tiedot</button>
             </div>
-            <div class="row">
-                <div class="col-sm-3" id="inputit">
+            <div class="col-sm-12">
+                <input type="range" name="year" value="{{ year }}" min="1917" max="2016" oninput="this.form.amountInput.value=this.value"/>
+            </div>
+            <div class="col-sm-12" id="vuosiHaku_valilehdet">
+                <div class="col-sm-3" id="vuosi_haku">
                     <input type="number" name="amountInput" value="{{ year }}" min="1917" max="2016" oninput="this.form.year.value=this.value"/>
                     <input type="submit" name="laheta" value="Hae"/> 
                 </div>
