about.html poistettu

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -82,7 +82,7 @@
                 <h4 class="modal-title">Tiedot</h4>
             </div>
             <div class="modal-body">
-                <p>Tänne voi kirjoittaa tietoja sovelluksesta :D</p>
+                <p>Sivuston tekijät Mikko Kaipainen, Riku Kukkaniemi, Janne Mäyrä, Viivi Teräväinen</p>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Sulje</button>
