--- a/app/templates/faktat.html
+++ b/app/templates/faktat.html
@@ -30,6 +30,7 @@
     <div class="row">
         <div class="col-sm-6">
             <h3>Suomen väestörakenne</h3>
+            
             <div id={{ chartID|safe }} class="chart"></div>
 
             <script type="text/javascript">
@@ -40,15 +41,32 @@
                 var yAxis = {{ yAxis|safe }}
                 var chart = {{ chart|safe }}
                 var plotOptions = {{ plotOptions|safe }}
-                var tooltip = {{ tooltip|safe  }}
+                var tooltip = {{ tooltip|safe }}
             </script>
-                <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+                <!--<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>-->
                 <script type="text/javascript" src="http://code.highcharts.com/highcharts.js"></script>
                 <script type="text/javascript" src="../static/main.js" charset="UTF-8"></script>
         </div>
         <div class="col-sm-6">
-            <!-- tänne graafeja -->
+            
+            <h3>Vuoden lämpötila</h3>
+            <div id={{ weatherChartID|safe }} class="chart"></div>
+
+            <script type="text/javascript">
+                var weatherchart_id = {{ weatherChartID|safe }}
+                var weatherseries = {{ weather_series|safe }}
+                var weathertitle = {{ weather_title|safe }}
+                var weatherxAxis = {{ weather_xAxis|safe }}
+                var weatheryAxis = {{ weather_yAxis|safe }}
+                var weatherlegend = {{ weather_legend|safe }}
+                var weathertooltip = {{ weather_tooltip|safe }}
+                var weatherchart = {{ weatherchart|safe }}
+            </script>
+                
+                <script type="text/javascript" src="../static/weather.js" charset="UTF-8"></script>
+                
         </div>
+        
     </div>
     
     <div class="row">
