--- a/app/templates/faktat.html
+++ b/app/templates/faktat.html
@@ -12,7 +12,7 @@
         <div class="col-sm-6">
             <h3>presidenttinä toimi {{presidentin_nimi}}</h3>
             {% if presidentin_kuva == '' %}
-                <p>Ei löytynyt presidenttiä hakemaltasi vuodelta :-(</p>
+                <p>Ensimmäinen presidentti valittiin vuonna 1919</p>
             {% else %}
                 <img class="img-responsive" src="{{ presidentin_kuva }}" alt="{{ presidentin_nimi }}" title="{{ presidentin_nimi }}">
             {% endif %}
