--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -70,7 +70,10 @@
                 <h4 class="modal-title">Tiedot</h4>
             </div>
             <div class="modal-body">
-                <p>Sivuston tekijät: Mikko Kaipainen, Riku Kukkaniemi, Janne Mäyrä, Viivi Teräväinen.</p>
+                <p>Jyväskylän yliopiston kurssille TIEA207 (Aineopintojen projektityö) toteutettu Open Data -opiskelijaprojekti.</p>
+                <p>Python Flask -websovellus, joka visualisoi Suomen itsenäisyyden vuosia kuvien, videoiden ja taulukoiden avulla.</p>
+                <p>Datalähteet: Yle Elävä Arkisto, Tilastokeskus, Ilmatieteen Laitos, Finna, Postimuseo</p>
+                <p>Tekijät: Mikko Kaipainen, Riku Kukkaniemi, Janne Mäyrä, Viivi Teräväinen</p>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Sulje</button>
