--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -38,7 +38,7 @@
 </div>
 
 
-<div class="container">
+<div class="container" id="sisalto">
     <!-- Ohje-modaali -->
     <div class="modal fade" id="OhjeModal" role="dialog">
         <div class="modal-dialog">
