--- a/app/static/style.css
+++ b/app/static/style.css
@@ -1,33 +1,3 @@
-.affix {
-    top: 0;
-    width: 100%;
-}
-.affix + .container {
-      padding-top: 90px;
-}
-
-.navbar {
-    z-index: 10;
-}
-
-.slider.slider-horizontal {
-    width: 100%;
-}
-
-.btn-group-lg>.btn, .btn-lg {
-  /* modaali-buttoneiden määrityksiä */
-    padding: 3px 5px;
-    font-size: 14px;
-}
-
-.col-sm-6 {
-    padding: 0.5%;
-}
-
-.navbar {
-    margin-bottom: 0;
-}
-
 body {
     font-family: Roboto;
 }
@@ -36,6 +6,12 @@ h1 {
     display: table-cell;
     vertical-align: middle;
     font-weight: 700;
+}
+
+#otsikko {
+    background-color: #eee;
+    width: 100%;
+    display: table;
 }
 
 h2 {
@@ -47,6 +23,48 @@ h2 {
 
 h3 {
     font-size: 18px;
+}
+
+#navi {
+    padding: 0.2% 0.5% 0.2% 0.5%;
+    background-color: #3B3F45;
+}
+
+.affix {
+    top: 0;
+    width: 100%;
+}
+
+.affix + .container {
+      padding-top: 90px;
+}
+
+.navbar {
+    z-index: 10;
+    margin-bottom: 0;
+}
+
+#valitse_vuosi{
+  /* Vuosihaun tyylittelyt alempana */
+    display: inline;
+    color: #ffffff;
+    margin-right: 1%; 
+}
+
+#modaali {
+    float:right;
+    margin: 0.1%;
+}
+
+.btn-group-lg>.btn, .btn-lg {
+  /* modaali-buttoneiden määrityksiä */
+    padding: 3px 5px;
+    font-size: 14px;
+}
+
+.slider.slider-horizontal {
+  /* Sliderin tyylittelyt alempana */
+    width: 100%;
 }
 
 ul {
@@ -73,16 +91,16 @@ li a {
     border-radius: 4px;
 }
 
+.active {
+    background-color: #808080;
+    color: #000000;
+}
+
 /* hover = hiiri elementin päällä */
 li a:hover:not(.active) {
     background-color: #4c4c4c;
     color: white;
     text-decoration: none;
-}
-
-.active {
-    background-color: #808080;
-    color: #000000;
 }
 
 .active:hover {
@@ -91,30 +109,11 @@ li a:hover:not(.active) {
     text-decoration: none;
 }
 
-#otsikko {
-    background-color: #eee;
-    width: 100%;
-    display: table;
+.col-sm-6 {
+    padding: 0.5%;
 }
 
-#valitse_vuosi{
-    display: inline;
-    color: #ffffff;
-    margin-right: 1%; 
-}
-
-#modaali {
-    float:right;
-    margin: 0.1%;
-}
-
-#navi {
-    padding: 0.2% 0.5% 0.2% 0.5%;
-    background-color: #3B3F45;
-}
-
-
-@media only screen and (min-width: 1440px) and (max-width: 2559px) {
+@media only screen and (min-width: 1441px) and (max-width: 1500px) {
     #navi {
         max-width: 1168px;
         margin-left: 9.5%;
@@ -124,17 +123,93 @@ li a:hover:not(.active) {
         max-width: 1168px;
         margin-left: 9.5%;
     }
+
+    #sisalto {
+        max-width: 1168px;
+        margin-left: 9.5%;
+    }
 }
 
-@media only screen and (min-width: 2560px) {
+@media only screen and (min-width: 1501px) and (max-width: 2000px) {
     #navi {
         max-width: 1168px;
-        margin-left: 27.25%;
+        margin-left:15%;
     }
 
     #otsikko {
         max-width: 1168px;
-        margin-left: 27.25%;
+        margin-left: 15%;
+    }
+
+    #sisalto {
+        max-width: 1168px;
+        margin-left: 15%;
+    }
+}
+
+@media only screen and (min-width: 2001px) {
+    #navi {
+        max-width: 1168px;
+        margin-left:25%;
+    }
+
+    #otsikko {
+        max-width: 1168px;
+        margin-left: 25%;
+    }
+
+    #sisalto {
+        max-width: 1168px;
+        margin-left: 25%;
+    }
+}
+
+@media only screen and (max-width: 320px) {
+    ul {
+        width: 100%;
+        margin-left: 3%;
+    }
+}
+
+@media only screen and (min-width: 321px) and (max-width: 375px) {
+    ul {
+        width: 100%;
+        margin-left: 10%;
+    }
+}
+
+@media only screen and (min-width: 376px) and (max-width: 425px) {
+    ul {
+        width: 100%;
+        margin-left: 17%;
+    }
+}
+
+@media only screen and (min-width: 426px) and (max-width: 767px) {
+    ul {
+        width: 100%;
+        margin-left:33%;
+    }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+    ul {
+        width: 100%;
+        margin-left:37%;
+    }
+}
+
+@media only screen and (min-width: 1025px) and (max-width: 1440px) {
+    ul {
+        width: 30%;
+        margin-left:39%;
+    }
+}
+
+@media only screen and (min-width: 1441px) and (max-width: 2560px) {
+    ul {
+        width: 30%;
+        margin-left:39%;
     }
 }
 
@@ -235,6 +310,8 @@ input[type=range]:focus::-ms-fill-upper {
 }
 /* Sliderin tyylittelyt loppuu */
 
+
+/* Vuosihaun tyylittelyt alkaa */
 input[type=number] {
     text-align: center; 
     background: #ffffff; 
@@ -254,3 +331,4 @@ input[type=submit] {
 input[type=submit]:hover {
     box-shadow: 0 1px 7px 0 #ffffff, 0 1px 2px 0 #ffffff; 
 }
+/* Vuosihaun tyylittelyt loppuu */
