ulkoasu pitäisi olla nyt valmis

--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -2,7 +2,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h1>Voi räkä, jotain meni pieleen</h1>
-  <p>Koetetaan korjata</p>
+  <h1>Voi räkä, jotain meni pieleen.</h1>
+  <p>Koetetaan korjata.</p>
   <p><a href="{{ url_for('faktat') }}">Takaisin etusivulle</a></p>
 {% endblock %}
