--- a/app/templates/videot.html
+++ b/app/templates/videot.html
@@ -8,9 +8,7 @@
 {% endblock %}
 
 {% block content %}
-    <h3>julkaistiin mm. nämä videot</h3>
-
-    <div class="row">
+    <h3 id="video_otsikko">julkaistiin mm. nämä videot</h3>
     {% for url in areena_url %}
         <div class="col-sm-6">
             <div class="embed-responsive embed-responsive-16by9">
