--- a/app/static/style.css
+++ b/app/static/style.css
@@ -1,28 +1,41 @@
+html {
+    font-family: 'Open Sans', sans-serif;
+}
+
 body {
-    font-family: Roboto;
+    background-color: #F6F9FA;
 }
 
 h1 {
     display: table-cell;
     vertical-align: middle;
-    font-weight: 700;
+    font-family: 'Ubuntu Condensed', sans-serif;
+    font-size: 42px;
 }
 
 #otsikko {
-    background-color: #eee;
+    background-color: #F6F9FA;
     width: 100%;
     display: table;
 }
 
 h2 {
+    font-family: 'Ubuntu Condensed', sans-serif;
     font-size: 24px;
-    margin-top: 15px;
+    margin-top: 10px;
     margin-bottom: 0;
-    font-weight: 600;
+    font-weight: 500;
 }
 
 h3 {
-    font-size: 18px;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 13.5px;
+    margin-top: 7px;
+    margin-left: 11px;
+}
+
+#video_otsikko {
+    margin-left: 0;
 }
 
 #navi {
@@ -36,7 +49,7 @@ h3 {
 }
 
 .affix + .container {
-      padding-top: 90px;
+      padding-top: 52px;
 }
 
 .navbar {
@@ -44,22 +57,50 @@ h3 {
     margin-bottom: 0;
 }
 
-#valitse_vuosi{
-  /* Vuosihaun tyylittelyt alempana */
-    display: inline;
-    color: #ffffff;
-    margin-right: 1%; 
+#navin_tokarivi {
+    padding: 0;
+}
+
+.col-sm-4 {
+    float: left;
+    width: 33.33333333%;
+}
+
+#modaalit {
+    float: right;
+}
+
+#vuosi_haku_inputit {
+    padding-left: 8px;
 }
 
 #modaali {
     float:right;
-    margin: 0.1%;
+    margin: 1px;
+}
+
+#valilehdet {
+    text-align: center;
+    display: table;
 }
 
 .btn-group-lg>.btn, .btn-lg {
   /* modaali-buttoneiden määrityksiä */
     padding: 3px 5px;
     font-size: 14px;
+    border: 0;
+}
+
+.btn-info {
+    color: #808080;
+    background-color: #3B3F45;
+    border-color: #3B3F45;
+}
+
+.btn-info:hover {
+    color: #808080;
+    font-weight:700;
+    background-color: #151515;
 }
 
 .slider.slider-horizontal {
@@ -68,12 +109,13 @@ h3 {
 }
 
 ul {
+    display: table-cell;
+    vertical-align: middle;
     list-style-type: none;
-    width: 27%;
-    margin: auto;
     padding: 0;
-    overflow: hidden;
     background-color: #3B3F45;
+    display: inline-block;
+    margin-bottom: 0;
 }
 
 li {
@@ -81,14 +123,15 @@ li {
 }
 
 li a {
-    margin: 0 10px 0 10px;
+    margin: 0 8px 0 8px;
+    font-family: 'Ubuntu Condensed', sans-serif;
     font-size: 16px;
     display: block;
     color: white;
     text-align: center;
-    padding: 4px 6px;
+    padding: 2px 4px;
     text-decoration: none;
-    border-radius: 4px;
+    border-radius: 5px;
 }
 
 .active {
@@ -97,20 +140,20 @@ li a {
 }
 
 /* hover = hiiri elementin päällä */
-li a:hover:not(.active) {
-    background-color: #4c4c4c;
-    color: white;
-    text-decoration: none;
-}
-
-.active:hover {
-    background-color: #808080;
-    color: white;
+li a:hover {
+    background-color: #151515;
+    color: #ffffff;
     text-decoration: none;
 }
 
 .col-sm-6 {
     padding: 0.5%;
+}
+
+@media (min-width: 844px) {
+    .col-sm-4 {
+        width: 33.33333333%;
+    }
 }
 
 @media only screen and (min-width: 1441px) and (max-width: 1500px) {
@@ -164,65 +207,22 @@ li a:hover:not(.active) {
     }
 }
 
-@media only screen and (max-width: 320px) {
-    ul {
-        width: 100%;
-        margin-left: 3%;
-    }
-}
-
-@media only screen and (min-width: 321px) and (max-width: 375px) {
-    ul {
-        width: 100%;
-        margin-left: 10%;
-    }
-}
-
-@media only screen and (min-width: 376px) and (max-width: 425px) {
-    ul {
-        width: 100%;
-        margin-left: 17%;
-    }
-}
-
-@media only screen and (min-width: 426px) and (max-width: 767px) {
-    ul {
-        width: 100%;
-        margin-left:33%;
-    }
-}
-
-@media only screen and (min-width: 768px) and (max-width: 1024px) {
-    ul {
-        width: 100%;
-        margin-left:37%;
-    }
-}
-
-@media only screen and (min-width: 1025px) and (max-width: 1440px) {
-    ul {
-        width: 30%;
-        margin-left:39%;
-    }
-}
-
-@media only screen and (min-width: 1441px) and (max-width: 2560px) {
-    ul {
-        width: 30%;
-        margin-left:39%;
-    }
-}
-
 @media only screen and (max-width: 425px) {
     .affix + .container {
-        padding-top: 145px;
+        padding-top: 100px;
+    }
+}
+
+@media only screen and (max-width: 320px) {
+    .affix + .container {
+        padding-top: 150px;
     }
 }
 
 /* Sliderin tyylittelyt alkaa */
 input[type=range] {
   -webkit-appearance: none;
-  margin:8px 0;
+  margin: 6px 0;
   width: 100%;
 }
 input[type=range]:focus {
@@ -230,7 +230,7 @@ input[type=range]:focus {
 }
 input[type=range]::-webkit-slider-runnable-track {
   width: 100%;
-  height: 8.4px;
+  height: 8px;
   cursor: pointer;
   animate: 0.2s;
   box-shadow: 0.1px 0.1px 0.1px #000000, 0px 0px 0.1px #0d0d0d;
@@ -240,11 +240,11 @@ input[type=range]::-webkit-slider-runnable-track {
 }
 input[type=range]::-webkit-slider-thumb {
   box-shadow: 0.1px 0.1px 0.1px #000000, 0px 0px 0.1px #0d0d0d;
-  border: 0.1px solid #000000;
+  /*border: 0.1px solid #fffff;*/
   height: 16px;
   width: 16px;
   border-radius: 10px;
-  background: #3071a9;
+  background: #31B0D5;
   cursor: pointer;
   -webkit-appearance: none;
   margin-top: -4.5px;
@@ -264,11 +264,11 @@ input[type=range]::-moz-range-track {
 }
 input[type=range]::-moz-range-thumb {
   box-shadow: 0.1px 0.1px 0.1px #000000, 0px 0px 0.1px #0d0d0d;
-  border: 0.1px solid #000000;
+  /*border: 0.1px solid #fffff;*/
   height: 16px;
   width: 16px;
   border-radius: 10px;
-  background: #3071a9;
+  background: #31B0D5;
   cursor: pointer;
 }
 input[type=range]::-ms-track {
@@ -295,11 +295,11 @@ input[type=range]::-ms-fill-upper {
 }
 input[type=range]::-ms-thumb {
   box-shadow: 0.1px 0.1px 0.1px #000000, 0px 0px 0.1px #0d0d0d;
-  border: 0.1px solid #000000;
+  /*border: 0.1px solid #fffff;*/
   height: 16px;
   width: 16px;
   border-radius: 10px;
-  background: #3071a9;
+  background: #31B0D5;
   cursor: pointer;
 }
 input[type=range]:focus::-ms-fill-lower {
@@ -311,24 +311,40 @@ input[type=range]:focus::-ms-fill-upper {
 /* Sliderin tyylittelyt loppuu */
 
 
-/* Vuosihaun tyylittelyt alkaa */
+/* Vuosihaun (number ja submit) tyylittelyt alkaa */
 input[type=number] {
-    text-align: center; 
-    background: #ffffff; 
+    color: #ffffff;
+    font-size: 17px;
+    font-family: 'Ubuntu Condensed', sans-serif;
+    text-align: center;
+    background-color: #3B3F45;
     cursor: text;
-    -webkit-border-radius: 3px;
     border-radius: 3px;
+    border: 0;
+    padding: 0;
+    margin: 0;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    /* display: none; <- Crashes Chrome on hover */
+    -webkit-appearance: none;
+    margin: 0; /*Silti jää jotakin marginia, jota ei vissiin saa pois*/
 }
 
 input[type=submit] {
-    padding: 2px 5px; 
-    background: #e7e7e7; 
+    font-family: 'Ubuntu Condensed', sans-serif;
+    font-size: 15px;
+    padding: 1px 7px; 
     cursor: pointer;
-    -webkit-border-radius: 6px;
     border-radius: 6px; 
+    color: #ffffff;
+    background-color: #5bc0de;
+    border-color: #46b8da;
+    margin: 0;
 }
 
 input[type=submit]:hover {
-    box-shadow: 0 1px 7px 0 #ffffff, 0 1px 2px 0 #ffffff; 
+    box-shadow: 0 0.1px 2px 0 #ffffff, 0 0.1px 2px 0 #ffffff; 
 }
 /* Vuosihaun tyylittelyt loppuu */
