--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -2,7 +2,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h1>Voi räkä, sivua ei löytynyt</h1>
-  <p>Ei voi mitään</p>
+  <h1>Voi räkä, sivua ei löytynyt.</h1>
+  <p>Ei voi mitään.</p>
   <p><a href="{{ url_for('faktat') }}">Takaisin etusivulle</a></p>
 {% endblock %}
