--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,6 +8,7 @@
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css" href="../static/style.css"/>
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Ubuntu+Condensed|Open+Sans">
 </head>
 
 <body>
@@ -19,19 +20,20 @@
     <div class="col-sm-12">
         <form action="{{ request.base_url }}" method="POST">
             <div class="col-sm-12">
-                <p id="valitse_vuosi">Valitse vuosi: </p>
-
-                <input type="number" name="amountInput" value="{{ year }}" min="1917" max="2016" oninput="this.form.year.value=this.value"/>
-                <input type="submit" name="laheta" value="Hae"/>
-                
-                <button type="button" id="modaali" class="btn btn-info btn-lg" data-toggle="modal" data-target="#OhjeModal">Ohje</button>
-                <button type="button" id="modaali" class="btn btn-info btn-lg" data-toggle="modal" data-target="#TiedotModal">Tiedot</button>
-            </div>
-            <div class="col-sm-12">
                 <input type="range" name="year" value="{{ year }}" min="1917" max="2016" oninput="this.form.amountInput.value=this.value"/>
             </div>
-            <div class="col-sm-12">
+            <div class="col-sm-12" id="navin_tokarivi">
+                <div class="col-sm-4" id="vuosi_haku_inputit">
+                    <input id="vuosi_input" type="number" name="amountInput" value="{{ year }}" min="1917" max="2016" oninput="this.form.year.value=this.value"/>
+                    <input id="haku_input" type="submit" name="laheta" value="Hae"/>
+                </div>
+                <div class="col-sm-4" id="valilehdet">
                     {% block nav %}{% endblock %}
+                </div>
+                <div class="col-sm-4" id="modaalit">
+                    <button type="button" id="modaali" class="btn btn-info btn-lg" data-toggle="modal" data-target="#TiedotModal">Tiedot</button>
+                    <button type="button" id="modaali" class="btn btn-info btn-lg" data-toggle="modal" data-target="#OhjeModal">Ohje</button>
+                </div>
             </div>
         </form>
     </div>
@@ -39,26 +41,6 @@
 
 
 <div class="container" id="sisalto">
-    <!-- Ohje-modaali -->
-    <div class="modal fade" id="OhjeModal" role="dialog">
-        <div class="modal-dialog">
-            <!-- Modal content-->
-            <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Ohjeita</h4>
-            </div>
-            <div class="modal-body">
-                <p>Tarkoitus on valita sliderilta vuosi, jolta haluat tietoa hakea.</p>
-                <p>Valittavanasi ovat vuodet 1917-2016.</p>
-                <p>Voit tutkia hakemasi vuoden dataa klikkailemalla eri välilehtiä, joita ovat Faktat, Videot ja Kuvat.</p>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Sulje</button>
-            </div>
-            </div>
-        </div>
-    </div>
     
     <!-- Tiedot-modaali -->
     <div class="modal fade" id="TiedotModal" role="dialog">
@@ -80,6 +62,28 @@
             </div>
             </div>
             
+        </div>
+    </div>
+    
+    <!-- Ohje-modaali -->
+    <div class="modal fade" id="OhjeModal" role="dialog">
+        <div class="modal-dialog">
+            <!-- Modal content-->
+            <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Ohjeita</h4>
+            </div>
+            <div class="modal-body">
+                <p>Tarkoitus on valita sliderilta vuosi, jolta haluat tietoa hakea.</p>
+                <p>Valittavanasi ovat vuodet 1917-2016.</p>
+                <p>Muista painaa Hae-nappia!</p>
+                <p>Voit tutkia hakemasi vuoden dataa klikkailemalla eri välilehtiä, joita ovat Faktat, Videot ja Kuvat.</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Sulje</button>
+            </div>
+            </div>
         </div>
     </div>
     
