baseen lisätty melkein toimiva korjaus.

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,16 +15,26 @@
 <div class="container" id="otsikko" style="height:100px;">
     <h1 class="text-center">SUOMEN VUOSIKATSAUS</h1>
 </div>
+<script>
+$(document).load(function() {
+  //$('#vuosi_input').attr({"value" : "1962"});
+  $('#haku_input').click(function(){
+    var vuosi = $('#vuosi_input').attr( "value" );
+      $('#vuosi_input').attr({"value" : vuosi});
+      $('#slider_input').attr({"value" : vuosi});
+});
 
+});
+</script>
 <div id="navi" class="navbar navbar-inverse" data-spy="affix" data-offset-top="100">
     <div class="col-sm-12">
         <form action="{{ request.base_url }}" method="POST">
             <div class="col-sm-12">
-                <input type="range" name="year" value="{{ year }}" min="1917" max="2016" oninput="this.form.amountInput.value=this.value"/>
+                <input id="slider_input" type="range" name="year" value="vuosi" min="1917" max="2016" oninput="this.form.amountInput.value=this.value"/>
             </div>
             <div class="col-sm-12" id="navin_tokarivi">
                 <div class="col-sm-4" id="vuosi_haku_inputit">
-                    <input id="vuosi_input" type="number" name="amountInput" value="{{ year }}" min="1917" max="2016" oninput="this.form.year.value=this.value"/>
+                    <input id="vuosi_input" type="number" name="amountInput" value="vuosi" min="1917" max="2016" oninput="this.form.year.value=this.value"/>
                     <input id="haku_input" type="submit" name="laheta" value="Hae"/>
                 </div>
                 <div class="col-sm-4" id="valilehdet">
@@ -41,7 +51,7 @@
 
 
 <div class="container" id="sisalto">
-    
+
     <!-- Tiedot-modaali -->
     <div class="modal fade" id="TiedotModal" role="dialog">
         <div class="modal-dialog">
@@ -61,10 +71,10 @@
                 <button type="button" class="btn btn-default" data-dismiss="modal">Sulje</button>
             </div>
             </div>
-            
+
         </div>
     </div>
-    
+
     <!-- Ohje-modaali -->
     <div class="modal fade" id="OhjeModal" role="dialog">
         <div class="modal-dialog">
@@ -86,10 +96,10 @@
             </div>
         </div>
     </div>
-    
+
     <h2>Vuonna {{year}}</h2>
     {% block content %}{% endblock %}
 </div>
-    
+
 </body>
 </html>
