--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,12 +16,19 @@
     <h1 class="text-center">SUOMEN VUOSIKATSAUS</h1>
 </div>
 <script>
-$(document).load(function() {
-  //$('#vuosi_input').attr({"value" : "1962"});
+
+$(document).ready(function() {
+  //var vuosi = 1992;
+  //document.getElementById("slider_input").setAttribute("value", vuosi);
+  //document.getElementById("vuosi_input").setAttribute("value", vuosi);
   $('#haku_input').click(function(){
-    var vuosi = $('#vuosi_input').attr( "value" );
-      $('#vuosi_input').attr({"value" : vuosi});
-      $('#slider_input').attr({"value" : vuosi});
+    //var vuosi = $('#vuosi_input').attr( "value" );
+    var vuosi = document.getElementById("vuosi_input").getAttribute("value");
+    document.getElementById("slider_input").setAttribute("value", vuosi);
+    document.getElementById("vuosi_input").setAttribute("value", vuosi);
+    alert("kukkuu");
+      //$('#vuosi_input').attr({"value" : 1992});
+      //$('#slider_input').attr({"value" : 1992});
 });
 
 });
@@ -30,11 +37,11 @@ $(document).load(function() {
     <div class="col-sm-12">
         <form action="{{ request.base_url }}" method="POST">
             <div class="col-sm-12">
-                <input id="slider_input" type="range" name="year" value="vuosi" min="1917" max="2016" oninput="this.form.amountInput.value=this.value"/>
+                <input id="slider_input" type="range" name="year" value="" min="1917" max="2016" oninput="this.form.amountInput.value=this.value"/>
             </div>
             <div class="col-sm-12" id="navin_tokarivi">
                 <div class="col-sm-4" id="vuosi_haku_inputit">
-                    <input id="vuosi_input" type="number" name="amountInput" value="vuosi" min="1917" max="2016" oninput="this.form.year.value=this.value"/>
+                    <input id="vuosi_input" type="number" name="amountInput" value="" min="1917" max="2016" oninput="this.form.year.value=this.value"/>
                     <input id="haku_input" type="submit" name="laheta" value="Hae"/>
                 </div>
                 <div class="col-sm-4" id="valilehdet">
